--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,10 @@
         <ul class="link nav-flex">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="mail-link">
-              <span lang="en">
-                <svg class="nav-icon-envelope" width="16" height="12">
-                  <use href="./images/icons.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com
-              </span>
+              <svg class="nav-icon-envelope" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
           <li class="item">
@@ -85,7 +83,7 @@
 
           <ul class="link exzamples-portfolio">
             <li class="exsamples-list">
-              <a href="" class="decoration">
+              <a href="" class="decoration exsamples-list-link">
                 <img
                   src="./images/img-exsamples1.jpg"
                   alt="Приклад веб-сайту"
@@ -99,8 +97,8 @@
               </a>
             </li>
             <li class="exsamples-list">
-              <a href="" class="decoration"
-                ><img
+              <a href="" class="decoration exsamples-list-link">
+                <img
                   src="./images/img-exsamples2.jpg"
                   alt="Приклад дизайну"
                   width="370"
@@ -116,8 +114,8 @@
               </a>
             </li>
             <li class="exsamples-list">
-              <a href="" class="decoration"
-                ><img
+              <a href="" class="decoration exsamples-list-link">
+                <img
                   src="./images/img-exsamples3.jpg"
                   alt="Приклад додатку"
                   width="370"
@@ -131,8 +129,8 @@
               </a>
             </li>
             <li class="exsamples-list">
-              <a href="" class="decoration"
-                ><img
+              <a href="" class="decoration exsamples-list-link">
+                <img
                   src="./images/img-exsamples4.jpg"
                   alt="Приклад маркетингу"
                   width="370"
@@ -146,8 +144,8 @@
               </a>
             </li>
             <li class="exsamples-list">
-              <a href="" class="decoration"
-                ><img
+              <a href="" class="decoration exsamples-list-link">
+                <img
                   src="./images/img-exsamples5.jpg"
                   alt="Приклад додатку"
                   width="370"
@@ -161,8 +159,8 @@
               </a>
             </li>
             <li class="exsamples-list">
-              <a href="" class="decoration"
-                ><img
+              <a href="" class="decoration exsamples-list-link">
+                <img
                   src="./images/img-exsamples6.jpg"
                   alt="Приклад веб-сайту"
                   width="370"
@@ -178,7 +176,7 @@
               </a>
             </li>
             <li class="exsamples-list">
-              <a href="" class="decoration">
+              <a href="" class="decoration exsamples-list-link">
                 <img
                   src="./images/img-exsamples7.jpg"
                   alt="Приклад дизайну"
@@ -193,8 +191,8 @@
               </a>
             </li>
             <li class="exsamples-list">
-              <a href="" class="decoration"
-                ><img
+              <a href="" class="decoration exsamples-list-link">
+                <img
                   src="./images/img-exsamples8.jpg"
                   alt="Приклад маркетингу"
                   width="370"
@@ -208,7 +206,7 @@
               </a>
             </li>
             <li class="exsamples-list">
-              <a href="" class="decoration">
+              <a href="" class="decoration exsamples-list-link">
                 <img
                   src="./images/img-exsamples9.jpg"
                   alt="Приклад додатку"
@@ -228,65 +226,63 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <div class="ft-container">
-          <div class="ft-left-side-container">
-            <a href="./index.html" class="logo-ft"
-              ><span lang="en">Web</span><span lang="en" class="logo-part-ft">Studio</span>
-            </a>
-            <address id="contacts" class="ft-address">
-              <ul class="link">
-                <li class="li-ft">
-                  <a
-                    href="https://goo.gl/maps/rEXAgXgdKfEQJtbBA?coh=178573&amp;entry=tt"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="address-link-ft"
-                    >м. Київ, пр-т Лесі Українки, 26
-                  </a>
-                </li>
-                <li class="li-ft">
-                  <a href="mailto:info@devstudio.com" class="mail-link-ft"
-                    ><span lang="en">info@devstudio.com</span>
-                  </a>
-                </li>
-                <li><a href="tel:+380961111111" class="tel-link-ft">+38 096 111 11 11</a></li>
-              </ul>
-            </address>
-          </div>
-          <div>
-            <h2 class="ft-header-social"><sub>приєднуйтесь</sub></h2>
-            <ul class="link ft-social-container">
-              <li class="ft-icon-container list">
-                <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
-                  <svg class="ft-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
+      <div class="ft-container container">
+        <div class="ft-left-side-container">
+          <a href="./index.html" class="logo-ft"
+            ><span lang="en">Web</span><span lang="en" class="logo-part-ft">Studio</span>
+          </a>
+          <address id="contacts" class="ft-address">
+            <ul class="link">
+              <li class="li-ft">
+                <a
+                  href="https://goo.gl/maps/rEXAgXgdKfEQJtbBA?coh=178573&amp;entry=tt"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="address-link-ft"
+                  >м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
-              <li class="ft-icon-container list">
-                <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
-                  <svg class="ft-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
+              <li class="li-ft">
+                <a href="mailto:info@devstudio.com" class="mail-link-ft"
+                  ><span lang="en">info@devstudio.com</span>
                 </a>
               </li>
-              <li class="ft-icon-container list">
-                <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
-                  <svg class="ft-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="ft-icon-container list">
-                <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
-                  <svg class="ft-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
+              <li><a href="tel:+380961111111" class="tel-link-ft">+38 096 111 11 11</a></li>
             </ul>
-          </div>
+          </address>
+        </div>
+        <div>
+          <h2 class="ft-header-social">приєднуйтесь</h2>
+          <ul class="link ft-social-container">
+            <li class="ft-icon-container list">
+              <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
+                <svg class="ft-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="ft-icon-container list">
+              <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
+                <svg class="ft-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="ft-icon-container list">
+              <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
+                <svg class="ft-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="ft-icon-container list">
+              <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
+                <svg class="ft-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
