--- a/index.html
+++ b/index.html
@@ -149,58 +149,36 @@
               <div class="our-team-item">
                 <h3 class="our-team-name">Ігор Дем'яненко</h3>
                 <p class="our-team-paragraph"><span lang="en">Designer</span></p>
-                <div class="our-team-social-item">
-                  <ul class="our-team-social-container link">
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="our-team-social-container link">
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list">
@@ -208,58 +186,36 @@
               <div class="our-team-item">
                 <h3 class="our-team-name">Ольга Рєпіна</h3>
                 <p class="our-team-paragraph"><span lang="en">Frontend Developer</span></p>
-                <div class="our-team-social-item">
-                  <ul class="our-team-social-container link">
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="our-team-social-container link">
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list">
@@ -267,58 +223,36 @@
               <div class="our-team-item">
                 <h3 class="our-team-name">Микола Тарасов</h3>
                 <p class="our-team-paragraph"><span lang="en">Marketing</span></p>
-                <div class="our-team-social-item">
-                  <ul class="our-team-social-container link">
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="our-team-social-container link">
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list">
@@ -326,58 +260,36 @@
               <div class="our-team-item">
                 <h3 class="our-team-name">Михайло Єрмаков</h3>
                 <p class="our-team-paragraph"><span lang="en">UI Designer</span></p>
-                <div class="our-team-social-item">
-                  <ul class="our-team-social-container link">
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="our-team-icon-container list">
-                      <a
-                        href=""
-                        class="our-team-icon-link"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="our-team-icon" width="20" height="20">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="our-team-social-container link">
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
